# advent-of-code

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml  requirements.txt  ruff.toml  setup.py
2015/: 02.py  03.py  06.py  07.py  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2016/: 03.py  04.py  06.py  07.py  08.py  1.py  11.py  12.py  13.py  15.py  18.py  2.py  21.py  22.py  4.py  5.py  7.py
2019/: 01.py
2021/: 01.py
2023/: 01.py  02.py
src/aoc/python/2015/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
src/aoc/python/2016/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  14.py  16.py  17.py  19.py  20.py  23.py  24.py  25.py
src/aoc/python/2017/: 01.py
src/aoc/python/2018/: 01.py
src/aoc/python/2020/: 01.py
src/aoc/python/2022/: 01.py
src/aoc/python/utils/: __init__.py  input_handler.py
utils/: __init__.py  get_input.py  helpers.py  input_formatter.py  scratch.ipynb
utils/cli/: aoc_main.py
