[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soup-aoc"
description = "Python solutions for the yearly Advent of Code puzzles."
version = "0.0.1-a"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.11"
keywords = ["Advent of Code", "algorithms", "puzzles"]
authors = [
    { name = "Souvik Maiti", email = "souvik.maiti1@ucalgary.ca" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    "python-dotenv",
    "requests",
]

[project.urls]
"Advent of Code Homepage" = "https://adventofcode.com"
"Solution Repository" = "https://github.com/Oligoflexia/advent-of-code"

[tool.hatch.build.targets.wheel]
packages = ["src/aoc/python"]
